--- a/mission/index.html
+++ b/mission/index.html
@@ -4,12 +4,17 @@
 		<meta charset="UTF-8" />
 		<title>BYUI Mission Statement</title>
 		<link rel="stylesheet" href="styles.css" />
+		<script src="mission.js"defer></script>
 	</head>
 	<body>
 		<div class="content">
 			<header class="title">
 				<h1>Mission Statement</h1>
 				<h2>Brigham Young University-Idaho</h2>
+				<select id="theme-select">
+					<option value="light">Light</option>
+					<option value="dark">Dark</option>
+				  </select>
 			</header>
 			<main>
 				<p>
