Updated the menu button

--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="A sample gallery site to display cool pics.">
+  <meta name="Taylor" content="Taylor Brady">
   <title>Cool Pics 📷</title>
   <link rel="stylesheet" href="coolpics.css" />
 </head>
@@ -40,3 +42,4 @@
   <script src="coolpics.js"></script>
 </body>
 </html>
+
