--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="A sample gallery site to display cool pics.">
-  <meta name="Taylor" content="Taylor Brady">
+  <meta name="description" content="A sample gallery site to display cool pics." />
+  <meta name="author" content="Taylor Brady" />
   <title>Cool Pics 📷</title>
   <link rel="stylesheet" href="coolpics.css" />
 </head>
@@ -23,15 +23,15 @@
   <main>
     <h2>Current Work</h2>
     <section class="gallery">
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
-      <figure><img src="norris-sm.jpeg" alt="picture" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 1" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 2" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 3" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 4" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 5" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 6" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 7" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 8" /></figure>
+      <figure><img src="norris-sm.jpeg" alt="picture 9" /></figure>
     </section>
   </main>
 
@@ -42,4 +42,3 @@
   <script src="coolpics.js"></script>
 </body>
 </html>
-
