--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <header>
     <h1>Taylor Brady: WDD 131 Portfolio</h1>
     <a href="coolpics/index.html">Coolpics</a>
+    <a href="blog/index.html">Blog</a>
   </header>
 
   <main>
