updaed credit card

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h1>Taylor Brady: WDD 131 Portfolio</h1>
     <a href="coolpics/index.html">Coolpics</a>
     <a href="blog/index.html">Blog</a>
+    <a href="creditcard/index.html">Credit Card Form</a>
   </header>
 
   <main>
