fixed main link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="coolpics/index.html">Coolpics</a>
     <a href="blog/index.html">Blog</a>
     <a href="creditcard/index.html">Credit Card Form</a>
-    <a href="/register/index.html">Register for the Activity</a>
+    <a href="register/index.html">Register for the Activity</a>
 
   </header>
 
