--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a href="blog/index.html">Blog</a>
     <a href="creditcard/index.html">Credit Card Form</a>
     <a href="register/index.html">Register for the Activity</a>
-
+    <a href="recipes/index.html">Recipes</a>
 
   </header>
 
