--- a/recipes/index.html
+++ b/recipes/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sweet Potato Waffles | Recipe Book</title>
+  <title>Recipe Book</title>
 
   <meta name="description" content="Savory waffles made with sweet potato and a hint of ginger." />
   <meta property="og:title" content="Sweet Potato Waffles | Recipe Book" />
@@ -12,9 +12,9 @@
   <meta property="og:image" content="images/sweet-potato-waffle-md.jpg" />
   <meta property="og:url" content="https://yourdomain.com/index.html" />
   <meta name="twitter:card" content="summary_large_image" />
+
   <link rel="stylesheet" href="recipes.css" />
   <script type="module" src="main.js" defer></script>
-
 </head>
 <body>
   <header>
@@ -28,22 +28,7 @@
       <button type="submit" aria-label="Submit search">Search</button>
     </form>
 
-    <section class="recipe" aria-live="polite" aria-atomic="true">
-      <h2>Sweet Potato Waffles</h2>
-      <img src="images/sweet-potato-waffle-md.jpg" alt="Sweet Potato Waffles" width="400" height="300" />
-      <span
-        class="rating"
-        role="img"
-        aria-label="Rating: 4 out of 5 stars"
-      >
-        <span aria-hidden="true" class="icon-star">⭐</span>
-        <span aria-hidden="true" class="icon-star">⭐</span>
-        <span aria-hidden="true" class="icon-star">⭐</span>
-        <span aria-hidden="true" class="icon-star">⭐</span>
-        <span aria-hidden="true" class="icon-star-empty">☆</span>
-      </span>
-      <p class="description">Savory waffles made with sweet potato with a hint of ginger.</p>
-    </section>
+    <section id="recipe-display" class="recipe" aria-live="polite" aria-atomic="true"></section>
   </main>
 
   <footer>
@@ -53,7 +38,6 @@
       </a>
     </p>
     <div class="social" aria-label="Social media links">
-  
       <a href="#" aria-label="Instagram" title="Instagram"><img src="images/instagram_icon.svg" alt="Instagram icon" width="24" height="24" /></a>
       <a href="#" aria-label="YouTube" title="YouTube"><img src="images/youtube_icon.svg" alt="YouTube icon" width="24" height="24" /></a>
       <a href="#" aria-label="Pinterest" title="Pinterest"><img src="images/pinterest_icon.svg" alt="Pinterest icon" width="24" height="24" /></a>
