--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,14 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Recipe Book</title>
 
-  <meta name="description" content="Savory waffles made with sweet potato and a hint of ginger." />
-  <meta property="og:title" content="Sweet Potato Waffles | Recipe Book" />
-  <meta property="og:type" content="website" />
-  <meta property="og:description" content="Savory waffles made with sweet potato and a hint of ginger." />
-  <meta property="og:image" content="images/sweet-potato-waffle-md.jpg" />
-  <meta property="og:url" content="https://yourdomain.com/index.html" />
-  <meta name="twitter:card" content="summary_large_image" />
-
   <link rel="stylesheet" href="recipes.css" />
   <script type="module" src="main.js" defer></script>
 </head>
@@ -28,20 +20,15 @@
       <button type="submit" aria-label="Submit search">Search</button>
     </form>
 
-    <section id="recipe-display" class="recipe" aria-live="polite" aria-atomic="true"></section>
+    <section id="recipe-display" aria-live="polite" aria-atomic="true"></section>
   </main>
 
   <footer>
     <p style="font-size: 0.6em;">
-      <a href="https://www.flaticon.com/free-icons/recipe" title="Recipe icons by Freepik on Flaticon" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.flaticon.com/free-icons/recipe" target="_blank" rel="noopener noreferrer">
         Recipe icons created by Freepik - Flaticon
       </a>
     </p>
-    <div class="social" aria-label="Social media links">
-      <a href="#" aria-label="Instagram" title="Instagram"><img src="images/instagram_icon.svg" alt="Instagram icon" width="24" height="24" /></a>
-      <a href="#" aria-label="YouTube" title="YouTube"><img src="images/youtube_icon.svg" alt="YouTube icon" width="24" height="24" /></a>
-      <a href="#" aria-label="Pinterest" title="Pinterest"><img src="images/pinterest_icon.svg" alt="Pinterest icon" width="24" height="24" /></a>
-    </div>
   </footer>
 </body>
 </html>
