added link to index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <a href="creditcard/index.html">Credit Card Form</a>
     <a href="register/index.html">Register for the Activity</a>
     <a href="recipes/index.html">Recipes</a>
+    <a href="site-plan/site-plan.html">Site-plan</a>
 
   </header>
 
