--- a/jackwebsite/index.html
+++ b/jackwebsite/index.html
@@ -29,7 +29,7 @@
         <a href="/faqs">FAQs</a>
         <a href="/memberships">Memberships</a>
         <a href="/book">Book a Groomer</a>
-        <a href="tel:+1234567890">Call Us</a>
+        <a href="">Call Us</a>
         <a href="/cart" class="cart-icon" aria-label="Cart">🛒</a>
       </div>
 
