--- a/jackwebsite/index.html
+++ b/jackwebsite/index.html
@@ -25,7 +25,7 @@
         <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/services">Services</a>
-        <a href="/pricing">Pricing</a>
+        <a href="https://taylorbrady001.github.io/Wdd131/jackwebsite/index.html">Pricing</a>
         <a href="/faqs">FAQs</a>
         <a href="/memberships">Memberships</a>
         <a href="/book">Book a Groomer</a>
