added link to valedracia

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="register/index.html">Register for the Activity</a>
     <a href="recipes/index.html">Recipes</a>
     <a href="site-plan/site-plan.html">Site-plan</a>
+    <a href="Valedracia/index.html">Final Project</a>
 
   </header>
 
