Added updates to code

--- a/Valedracia/index.html
+++ b/Valedracia/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Valedracia</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="preload" href="css/styles.css" as="style">
+  <link rel="stylesheet" href="css/styles.css" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
 </head>
 <body>
-
   <nav class="navbar">
     <div class="nav-link">Home</div>
     <div class="nav-link">Lore</div>
@@ -16,9 +17,9 @@
 
   <section class="carousel">
     <div class="carousel-images">
-      <img src="images/landscape.png" class="active" alt="Slide 1" />
-      <img src="images/landscape2.png" alt="Slide 2" />
-      <img src="images/landscape 3.jpg" alt="Slide 3" />
+      <img src="images/landscape.png" class="active" alt="Slide 1" width="1000" height="400" loading="eager" />
+      <img src="images/landscape2.png" alt="Slide 2" width="1000" height="400" loading="lazy" />
+      <img src="images/landscape 3.jpg" alt="Slide 3" width="1000" height="400" loading="lazy" />
     </div>
     <div class="carousel-dots">
       <span class="dot active"></span>
@@ -27,62 +28,56 @@
     </div>
   </section>
 
- 
   <header class="intro-section">
     <h1>About Valedracia</h1>
-    <p>Valedracia is the fantasy world I’ve been building for my D&D campaign and my card game Mythrics. It’s full of story, and
-      powerful elemental magic. Each Element—like Light, Dark, Time, Fire, Chaos, etc.—has its own god or fallen god behind it, and those powers shape everything in the world.
-The story spans different eras. There are unique locations like ClearCliff and Duskwharf, where players can explore and GM's(Game Masters) can create adventures.
- The world is divided into regions, each with its own culture and history, like the Draconithia Empire, which is ruled by a council of powerful indivituals.
-Valedracia is basically my playground for storytelling—full of magic, strategy, and drama. Whether it’s in the card game or the campaign, there’s always something happening.
-
-</p>
+    <p>Valedracia is the fantasy world I’ve been building for my D&D campaign and my card game Mythrics...</p>
   </header>
+
   <section class="feature-grid">
     <div class="feature-card">
-      <img src="images/Explore Regions.png" alt="Explore Regions"/>
+      <img src="images/Explore Regions.png" alt="Explore Regions" width="300" height="200" loading="lazy" />
       <h2>Explore Regions</h2>
     </div>
     <div class="feature-card">
-      <img src="images/meetthegods.png" alt="Meet the Gods"/>
+      <img src="images/meetthegods.png" alt="Meet the Gods" width="300" height="200" loading="lazy" />
       <h2>Meet the Gods</h2>
     </div>
     <div class="feature-card">
-      <img src="images/Calander.png" alt="Calendar"/>
+      <img src="images/Calander.png" alt="Calendar" width="300" height="200" loading="lazy" />
       <h2>Calendar</h2>
     </div>
   </section>
 
-<section class="lore-info">
-  <div class="lore-block">
-    <img src="images/languages.png" alt="Languages">
-    <div class="lore-text">
-      <h3>Languages</h3>
-      <p>Valedracia is home to many tongues — from ancient runes whispered by the gods to tribal dialects echoing through the forests.</p>
+  <section class="lore-info">
+    <div class="lore-block">
+      <img src="images/languages.png" alt="Languages" width="250" height="auto" loading="lazy" />
+      <div class="lore-text">
+        <h3>Languages</h3>
+        <p>Valedracia is home to many tongues — from ancient runes whispered by the gods to tribal dialects echoing through the forests.</p>
+      </div>
     </div>
-  </div>
 
-  <div class="lore-block reverse">
-    <div class="lore-text">
-      <h3>Creatures</h3>
-      <p>Explore the beasts of Valedracia — mighty dragons, sly forest spirits, and the horrors that dwell in forgotten places.</p>
+    <div class="lore-block reverse">
+      <div class="lore-text">
+        <h3>Creatures</h3>
+        <p>Explore the beasts of Valedracia — mighty dragons, sly forest spirits, and the horrors that dwell in forgotten places.</p>
+      </div>
+      <img src="images/Creatures.png" alt="Creatures" width="250" height="auto" loading="lazy" />
     </div>
-    <img src="images/Creatures.png" alt="Creatures">
-  </div>
 
-  <div class="lore-block">
-    <img src="images/Morelore.png" alt="More Lore">
-    <div class="lore-text">
-      <h3>More Lore</h3>
-      <p>Delve deeper into myths, relics, and forgotten wars. The world of Valedracia hides secrets waiting to be uncovered.</p>
+    <div class="lore-block">
+      <img src="images/Morelore.png" alt="More Lore" width="250" height="auto" loading="lazy" />
+      <div class="lore-text">
+        <h3>More Lore</h3>
+        <p>Delve deeper into myths, relics, and forgotten wars. The world of Valedracia hides secrets waiting to be uncovered.</p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
- <footer class="footer">
+  <footer class="footer">
     <p>&copy; 2025 Valedracia. All rights reserved.</p>
   </footer>
 
-  <script src="js/scripts.js"></script>
+  <script defer src="js/scripts.js"></script>
 </body>
 </html>
