--- a/Valedracia/index.html
+++ b/Valedracia/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="nav-link">Home</div>
+    <div class="https://taylorbrady001.github.io/Wdd131/Valedracia/index.html">Home</div>
     <div class="nav-link">Lore</div>
     <div class="nav-link">Rulebook</div>
   </nav>
