added more content

--- a/Valedracia/index.html
+++ b/Valedracia/index.html
@@ -9,28 +9,21 @@
   <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="https://taylorbrady001.github.io/Wdd131/Valedracia/index.html">Home</div>
-    <div class="nav-link">Lore</div>
-    <div class="nav-link">Rulebook</div>
-  </nav>
+ <nav class="navbar">
+  <a class="nav-link" href="index.html">Home</a>
+  <a class="nav-link" href="lore.html">Lore</a>
+  <a class="nav-link" href="rulebook.html">Rulebook</a>
+</nav>
 
-  <section class="carousel">
-    <div class="carousel-images">
-      <img src="images/landscape.png" class="active" alt="Slide 1" width="1000" height="400" loading="eager" />
-      <img src="images/landscape2.png" alt="Slide 2" width="1000" height="400" loading="lazy" />
-      <img src="images/landscape 3.jpg" alt="Slide 3" width="1000" height="400" loading="lazy" />
-    </div>
-    <div class="carousel-dots">
-      <span class="dot active"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-    </div>
-  </section>
+ <img src="images/valedraciabanner.jpg" alt="Valedracia World" class="banner-image">
 
   <header class="intro-section">
     <h1>About Valedracia</h1>
-    <p>Valedracia is the fantasy world I’ve been building for my D&D campaign and my card game Mythrics...</p>
+    <p>Valedracia is a realm of ancient magic, shifting alliances,
+         and forgotten power. Set in a world where the veil between
+          myth and reality is thin, kingdoms rise and fall by the will of dragons, spirits, 
+          and the brave souls who dare to shape fate. Whether you seek glory, knowledge, or revenge. 
+          Valedracia is yours to explore.</p>
   </header>
 
   <section class="feature-grid">
@@ -48,31 +41,7 @@
     </div>
   </section>
 
-  <section class="lore-info">
-    <div class="lore-block">
-      <img src="images/languages.png" alt="Languages" width="250" height="auto" loading="lazy" />
-      <div class="lore-text">
-        <h3>Languages</h3>
-        <p>Valedracia is home to many tongues — from ancient runes whispered by the gods to tribal dialects echoing through the forests.</p>
-      </div>
-    </div>
 
-    <div class="lore-block reverse">
-      <div class="lore-text">
-        <h3>Creatures</h3>
-        <p>Explore the beasts of Valedracia — mighty dragons, sly forest spirits, and the horrors that dwell in forgotten places.</p>
-      </div>
-      <img src="images/Creatures.png" alt="Creatures" width="250" height="auto" loading="lazy" />
-    </div>
-
-    <div class="lore-block">
-      <img src="images/Morelore.png" alt="More Lore" width="250" height="auto" loading="lazy" />
-      <div class="lore-text">
-        <h3>More Lore</h3>
-        <p>Delve deeper into myths, relics, and forgotten wars. The world of Valedracia hides secrets waiting to be uncovered.</p>
-      </div>
-    </div>
-  </section>
 
   <footer class="footer">
     <p>&copy; 2025 Valedracia. All rights reserved.</p>
