--- a/Valedracia/index.html
+++ b/Valedracia/index.html
@@ -15,7 +15,9 @@
   <a class="nav-link" href="rulebook.html">Rulebook</a>
 </nav>
 
- <img src="images/valedraciabanner.jpg" alt="Valedracia World" class="banner-image">
+ <div class="cover-container">
+  <img src="images/valedraciabanner.jpg" alt="Valedracia Cover Art" class="valedracia-cover">
+</div>
 
   <header class="intro-section">
     <h1>About Valedracia</h1>
